[package]
name = "auriapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../tkym-commons/", package = "tkym-commons" }
windows = { path = "../tkym-windows/", package = "tkym-windows" }
graphics = { path = "../tkym-graphics/", package = "tkym-graphics" }
ttf-parser = "0.18.1"
